♻️ Rename models & replace `referent` in tests (#1536)
* rename model and update field

* use new model with new field

* replace referent with credential_id

* remove referent add alias for cred_id

* remove default none

* update test

* remove setting credential_id

* use validation alias and exclude referent

* update model name and use validation alias

* use new models

* :art:

* exclude fields

* :art:

* :test_tube:

* use CredInfo from verifier models, remove extended model

* update description

* rename model to remove Indy

* refactor: replace IndyCredPrecis with CredPrecis in verifier models

* use IndyNonRevocationInterval

* :art: Fix import

* :memo: Sync OpenAPI Specs

---------
